--- a/app/src/main/res/layout/friend_list_fragment_view_.xml
+++ b/app/src/main/res/layout/friend_list_fragment_view_.xml
@@ -12,102 +12,95 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp"
         android:background="@android:color/transparent"
         tools:context="com.bigjeon.grumbling.fragments.Friend_List_Fragment">
         <RelativeLayout
-            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <RelativeLayout
-                android:id="@+id/RL1"
-                android:layout_marginBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/TV1"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="23dp"
-                android:text="친구">
-            </TextView>
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/TV3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/RL1"
-                android:padding="2dp"
-                android:paddingBottom="5dp"
-                android:text="- 내 프로필"
-                android:textColor="@color/black"
-                android:textSize="11dp"
-                android:textStyle="bold"></TextView>
         <RelativeLayout
             android:id="@+id/Friend_List_My_Profile_Container"
-            android:layout_below="@id/TV3"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="12dp"
+            android:paddingBottom="24dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:visibility="visible"
+                android:id="@+id/TV_My_Profie"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_medium"
+                android:textColor="@color/Theme_Text_Color"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
+                android:gravity="left"
+                android:text="- 내 프로필"
+                android:textSize="12dp">
+            </TextView>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Friend_List_My_Img_Civ"
                 android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
+                android:layout_below="@id/TV_My_Profie"
                 android:src="@drawable/app_logo"
+                app:civ_border_width="0.5dp"
+                android:layout_marginTop="8dp"
                 app:civ_border_color="@color/Transparent_Green"
-                app:civ_border_width="1dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp">
             </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Friend_List_My_Name_TV"
                 android:layout_toRightOf="@id/Friend_List_My_Img_Civ"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:text="내 이름"
+                android:layout_below="@id/TV_My_Profie"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
             <TextView
                 android:id="@+id/Friend_List_Fragment_My_Uid"
-                android:textSize="10dp"
-                android:text="내 UID"
+                android:layout_marginTop="4dp"
+                android:textSize="14dp"
+                android:text="#내 지역"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_medium"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@id/Friend_List_My_Img_Civ"
                 android:layout_below="@id/Friend_List_My_Name_TV"
-                android:textColor="@color/Transparent_Black50"
+                android:textColor="@color/Theme_Less_Accent_Color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
         </RelativeLayout>
         <RelativeLayout
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:layout_below="@id/Friend_List_My_Profile_Container"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/TV2"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_regular"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:padding="4dp"
                 android:gravity="left"
-                android:padding="2dp"
                 android:text="- 친구"
-                android:textColor="@color/black"
-                android:textSize="11dp"
-                android:textStyle="bold"></TextView>
+                android:textSize="12dp">
+            </TextView>
            <RelativeLayout
                android:layout_below="@id/TV2"
+               android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
