--- a/app/src/main/res/layout/my_chatting_item.xml
+++ b/app/src/main/res/layout/my_chatting_item.xml
@@ -15,6 +15,8 @@
         android:id="@+id/Chatting_Text_TV"
         android:gravity="left"
         android:text="내용입력창입니다."
+        android:includeFontPadding="false"
+        android:fontFamily="@font/notosans_regular"
         android:background="@drawable/my_chat_background"
         android:textColor="@color/black"
         android:layout_alignParentRight="true"
@@ -29,6 +31,9 @@
                 android:text="입력시간"
                 android:id="@+id/Chatting_WriteDate_TV"
                 android:textSize="7dp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_regular"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_below="@+id/Chatting_Text_TV"
                 android:layout_toLeftOf="@id/Chatting_Text_TV"
                 android:layout_width="wrap_content"
@@ -38,11 +43,13 @@
             android:id="@+id/Read_Checker_TV"
             android:visibility="gone"
             android:paddingRight="5dp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_regular"
             android:layout_alignBottom="@id/Chatting_Text_TV"
             android:layout_toLeftOf="@id/Chatting_Text_TV"
             android:text="1"
             android:textStyle="bold"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/Theme_Text_Color"
             android:textSize="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
