--- a/app/src/main/res/layout/my_chatting_reply.xml
+++ b/app/src/main/res/layout/my_chatting_reply.xml
@@ -31,6 +31,8 @@
                         android:textSize="10dp"
                         android:padding="2dp"
                         android:textStyle="bold"
+                        android:includeFontPadding="false"
+                        android:fontFamily="@font/notosans_regular"
                         android:background="@drawable/post_view_title_under_edge_1dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
@@ -42,7 +44,9 @@
                         android:layout_alignParentRight="true"
                         android:textSize="10dp"
                         android:textStyle="bold"
-                        android:textColor="@color/Transparent_Black70"
+                        android:includeFontPadding="false"
+                        android:fontFamily="@font/notosans_regular"
+                        android:textColor="@color/Transparent_Black80"
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
                         android:text="답장칸"
@@ -55,6 +59,8 @@
                     android:padding="10dp"
                     android:gravity="left"
                     android:text="내용입력창입니다."
+                    android:includeFontPadding="false"
+                    android:fontFamily="@font/notosans_regular"
                     android:textColor="@color/black"
                     android:layout_below="@id/Reply_Containier"
                     android:layout_alignParentRight="true"
@@ -69,6 +75,9 @@
             android:text="입력시간"
             android:id="@+id/Chatting_WriteDate_TV"
             android:textSize="7dp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_regular"
+            android:textColor="@color/Theme_Text_Color"
             android:layout_below="@+id/Chatting_Text_Container"
             android:layout_toLeftOf="@id/Chatting_Text_Container"
             android:layout_width="wrap_content"
@@ -78,10 +87,12 @@
             android:id="@+id/Read_Checker_TV"
             android:visibility="gone"
             android:paddingRight="5dp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_regular"
             android:layout_alignBottom="@id/Chatting_Text_Container"
             android:layout_toLeftOf="@id/Chatting_Text_Container"
             android:text="1"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/Theme_Text_Color"
             android:textStyle="bold"
             android:textSize="10dp"
             android:layout_width="wrap_content"
