--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -5,16 +5,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_margin="5dp">
+        android:layout_margin="4dp">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Chatting_User_Img_CIV"
                 android:src="@drawable/app_logo"
-                app:civ_border_width="1dp"
-                app:civ_border_color="@color/purple_200"
-                android:layout_marginLeft="5dp"
+                app:civ_border_width="0.2dp"
+                android:layout_marginTop="2dp"
+                app:civ_border_color="@color/Theme_Text_Color"
                 android:layout_width="35dp"
                 android:layout_height="35dp">
             </de.hdodenhof.circleimageview.CircleImageView>
@@ -23,10 +23,13 @@
                 android:id="@+id/Chatting_User_Name_TV"
                 android:textSize="10dp"
                 android:text="유저 이름"
-                android:layout_marginLeft="10dp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_regular"
+                android:layout_marginLeft="6dp"
+                android:textStyle="bold"
                 android:layout_marginTop="5dp"
                 android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
-                android:textColor="@color/black"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
@@ -38,7 +41,7 @@
                 android:layout_below="@id/Chatting_User_Name_TV"
                 android:layout_marginBottom="5dp"
                 android:padding="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <RelativeLayout
@@ -52,7 +55,8 @@
                         android:textColor="@color/black"
                         android:textSize="10dp"
                         android:gravity="left"
-                        android:textStyle="bold"
+                        android:includeFontPadding="false"
+                        android:fontFamily="@font/notosans_regular"
                         android:background="@drawable/post_view_title_under_edge_1dp"
                         android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
@@ -62,11 +66,12 @@
                         android:id="@+id/Replied_Chat_TV"
                         android:layout_alignParentLeft="true"
                         android:textSize="10dp"
-                        android:textColor="@color/Transparent_Black70"
+                        android:textColor="@color/Transparent_Black80"
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
                         android:text="답장칸"
-                        android:textStyle="bold"
+                        android:includeFontPadding="false"
+                        android:fontFamily="@font/notosans_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                     </TextView>
@@ -80,6 +85,8 @@
                     android:text="내용입력창입니다."
                     android:textColor="@color/black"
                     android:textSize="10dp"
+                    android:includeFontPadding="false"
+                    android:fontFamily="@font/notosans_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
@@ -90,6 +97,9 @@
                 android:layout_below="@id/Chatting_Text_Container"
                 android:layout_alignRight="@id/Chatting_Text_Container"
                 android:textSize="7dp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_regular"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
