--- a/app/src/main/res/drawable/edge_right_1dp_black.xml
+++ b/app/src/main/res/drawable/edge_right_1dp_black.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/purple_100">
+                android:color="@color/Theme_Less_Accent_Color">
             </stroke>
             <solid android:color="@android:color/transparent"></solid>
         </shape>
