--- a/app/src/main/res/drawable/gradient_transparentblack_to_blak.xml
+++ b/app/src/main/res/drawable/gradient_transparentblack_to_blak.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
         android:angle="90"
         android:type="linear"
-        android:startColor="@color/Transparent_Black40"
+        android:startColor="@color/Transparent_Black80"
         android:centerColor="@color/Transparent_Black30"
-        android:endColor="@android:color/transparent">
+        android:endColor="@color/Transparent_Black80">
     </gradient>
 </shape>
