--- a/app/src/main/res/drawable/transparent_round_shape.xml
+++ b/app/src/main/res/drawable/transparent_round_shape.xml
@@ -7,7 +7,7 @@
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"/>
     <stroke
-        android:width="1dp"
-        android:color="@color/purple_200">
+        android:width="0.5dp"
+        android:color="@color/Theme_Text_Color">
     </stroke>
 </shape>
