--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,36 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/main_activity_background_img"
+    android:background="@color/Theme_Color"
     tools:context="com.bigjeon.grumbling.MainActivity">
 
+    <TextView
+        android:text="그렁"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="150dp"
+        android:textColor="@color/Theme_Text_Color"
+        android:fontFamily="@font/binggrae"
+        android:textSize="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </TextView>
+    <TextView
+        android:text="소통에 자유로움을 더하다 "
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_above="@id/Loading_GIF"
+        android:layout_marginBottom="100dp"
+        android:textColor="@color/Theme_Text_Color"
+        android:fontFamily="@font/binggrae"
+        android:textSize="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </TextView>
     <ImageView
         android:id="@+id/Loading_GIF"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="70dp"
         android:layout_centerInParent="true"
         android:layout_width="250dp"
         android:layout_height="15dp">
