--- a/app/src/main/res/layout/activity_setting_my_profile.xml
+++ b/app/src/main/res/layout/activity_setting_my_profile.xml
@@ -10,11 +10,12 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         type="com.bigjeon.grumbling.Setting_My_Profile_Activity" />
 </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:background="@drawable/my_profile_view_activity_background_img"
+    android:background="@color/Theme_Color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bigjeon.grumbling.Setting_My_Profile_Activity">
     <LinearLayout
+        android:padding="6dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -27,105 +28,137 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                 android:layout_marginLeft="5dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
+                android:backgroundTint="@color/Theme_Text_Color"
                 android:background="@drawable/ic_baseline_navigate_before_24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </ImageView>
+            <TextView
+                android:layout_centerInParent="true"
+                android:id="@+id/Setting_Fragment_My_Name_Tv"
+                android:text="User_Name"
+                android:padding="2dp"
+                android:textSize="18dp"
+                android:layout_toRightOf="@id/My_Profile_Back_IMV"
+                android:textStyle="bold"
+                android:textColor="@color/Theme_Text_Color"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
         </RelativeLayout>
         <LinearLayout
             android:orientation="vertical"
-            android:layout_weight="4"
+            android:layout_weight="7.5"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <RelativeLayout
-                android:layout_margin="5dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_alignParentLeft="true"
-                    android:src="@drawable/ic_launcher_background"
-                    app:civ_border_color="@color/Transparent_Green"
-                    app:civ_border_width="2dp"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp">
-                </de.hdodenhof.circleimageview.CircleImageView>
-                <RelativeLayout
-                    android:id="@+id/Setting_Fragment_User_Profile_Container"
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:src="@drawable/default_profile_img"
+                    app:civ_border_color="@color/Theme_Text_Color"
+                    app:civ_border_width="0.5dp"></de.hdodenhof.circleimageview.CircleImageView>
+                <TextView
+                    android:id="@+id/My_Profile_activity_User_Location_TV"
+                    android:text="#123 - 123"
+                    android:fontFamily="@font/notosans_regular"
+                    android:includeFontPadding="false"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="6dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:layout_above="@id/Setting_Fragment_Setting_Btns_Container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/Setting_Fragment_My_Profile_Img_Civ"
+                    android:padding="2dp"
+                    android:textSize="16dp">
+                </TextView>
+                <TextView
+                    android:id="@+id/Setting_Activity_State_Msg_Tv"
+                    android:gravity="center"
+                    android:text="상태 메세지"
+                    android:padding="6dp"
+                    android:fontFamily="@font/notosans_regular"
+                    android:textSize="14dp"
+                    android:includeFontPadding="false"
+                    android:layout_marginLeft="6dp"
+                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:layout_above="@id/My_Profile_activity_User_Location_TV"
+                    android:layout_toRightOf="@id/Setting_Fragment_My_Profile_Img_Civ"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </TextView>
+                <LinearLayout
+                    android:id="@+id/Setting_Fragment_Setting_Btns_Container"
+                    android:background="@drawable/transparent_round_shape"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="6dp"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_height="28dp">
+                    <Button
+                        android:id="@+id/Setting_Fragment_Unregister_Btn"
                         android:layout_weight="1"
-                        android:id="@+id/Setting_Fragment_My_Name_Tv"
-                        android:text="User_Name"
-                        android:padding="2dp"
-                        android:textSize="15dp"
-                        android:textStyle="bold"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
-                        android:textColor="@color/black"
-                        android:layout_width="wrap_content"
+                        android:layout_marginRight="3dp"
+                        android:text="계정 탈퇴"
+                        android:textSize="12dp"
+                        android:fontFamily="@font/notosans_regular"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/light_red"
+                        android:background="@drawable/edge_right_1dp_black"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/My_Profile_activity_User_UID_TV"
+                    </Button>
+                    <Button
+                        android:id="@+id/Setting_Fragment_Change_Profile_Btn"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="3dp"
+                        android:layout_weight="1"
+                        android:textSize="12dp"
+                        android:text="프로필 수정"
+                        android:fontFamily="@font/notosans_regular"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/Theme_Less_Accent_Color"
+                        android:background="@drawable/edge_right_1dp_black"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/Setting_Fragment_My_Name_Tv"
-                        android:padding="2dp"
-                        android:textSize="10dp"></TextView>
-                    <LinearLayout
-                        android:id="@+id/Setting_Fragment_Setting_Btns_Container"
-                        android:background="@drawable/transparent_round_shape"
-                        android:layout_alignParentBottom="true"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="3dp"
+                        android:layout_height="wrap_content">
+                    </Button>
+                    <Button
+                        android:id="@+id/Setting_Fragment_Sign_Out_Btn"
+                        android:layout_weight="1"
+                        android:text="로그아웃"
+                        android:textSize="12dp"
+                        android:fontFamily="@font/notosans_regular"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/Theme_Less_Accent_Color"
+                        android:background="@android:color/transparent"
                         android:layout_width="match_parent"
-                        android:gravity="center_vertical"
-                        android:layout_height="25dp">
-                        <Button
-                            android:id="@+id/Setting_Fragment_Unregister_Btn"
-                            android:layout_weight="1"
-                            android:layout_marginRight="3dp"
-                            android:text="계정 탈퇴"
-                            android:textSize="12dp"
-                            android:textStyle="bold"
-                            android:background="@drawable/edge_right_1dp_black"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </Button>
-                        <Button
-                            android:id="@+id/Setting_Fragment_Change_Profile_Btn"
-                            android:layout_marginLeft="3dp"
-                            android:layout_marginRight="3dp"
-                            android:layout_weight="1"
-                            android:textSize="12dp"
-                            android:textStyle="bold"
-                            android:text="프로필 수정"
-                            android:background="@drawable/edge_right_1dp_black"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </Button>
-                        <Button
-                            android:id="@+id/Setting_Fragment_Sign_Out_Btn"
-                            android:layout_weight="1"
-                            android:text="로그아웃"
-                            android:textSize="12dp"
-                            android:textStyle="bold"
-                            android:background="@android:color/transparent"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                        </Button>
-                    </LinearLayout>
-                </RelativeLayout>
+                        android:layout_height="wrap_content">
+                    </Button>
+                </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
         <RelativeLayout
+            android:layout_marginTop="12dp"
             android:layout_weight="25"
             android:layout_width="match_parent"
             android:layout_height="0dp">
