--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -2,7 +2,7 @@
 <layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginRight="15dp"
+    android:padding="12dp"
     android:layout_width="wrap_content"
     android:layout_height="40dp">
 
@@ -10,7 +10,7 @@
         android:id="@+id/Category_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/Transparent_Green"
+        android:textColor="@color/Theme_Text_Color"
         android:text="#.카테고리"
         android:textStyle="bold"
         android:textSize="13dp"
