--- a/app/src/main/res/layout/chatting_list_item.xml
+++ b/app/src/main/res/layout/chatting_list_item.xml
@@ -3,16 +3,18 @@
 <RelativeLayout
     android:id="@+id/Chatting_List_Container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginTop="5dp"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:padding="5dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Chatting_List_User_Img_Civ"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/purple_200"
         android:src="@drawable/app_logo"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent="true"
+        app:civ_border_color="@color/Theme_Less_Accent_Color"
+        app:civ_border_width="0.5dp"
         android:layout_width="50dp"
         android:layout_height="50dp">
     </de.hdodenhof.circleimageview.CircleImageView>
@@ -21,42 +23,55 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User_Name"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginLeft="5dp"
-        android:textSize="15dp"
+        android:textColor="@color/Theme_Text_Color"
+        android:fontFamily="@font/notosans_medium"
+        android:includeFontPadding="false"
+        android:layout_marginLeft="8dp"
+        android:textSize="16dp"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/Chatting_List_User_Img_Civ">
     </TextView>
     <TextView
         android:id="@+id/Chatting_List_Last_Chat_TV"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="5dp"
+        android:textSize="14dp"
         android:text="마지막 채팅"
+        android:includeFontPadding="false"
+        android:fontFamily="@font/notosans_regular"
+        android:textColor="@color/Theme_Less_Accent_Color"
         android:layout_below="@id/Chatting_List_User_Name_TV"
         android:layout_toRightOf="@id/Chatting_List_User_Img_Civ"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content">
     </TextView>
     <TextView
+        android:visibility="invisible"
         android:id="@+id/Chatting_List_New_Chat_Count_TV"
-        android:layout_marginRight="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="8dp"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
         android:textColor="@android:color/holo_red_light"
-        android:text=""
-        android:textStyle="bold"
+        android:text="1"
+        android:textSize="14dp"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
-        <TextView
-            android:id="@+id/Chatting_List_Last_Chat_Date_TV"
-            android:layout_toLeftOf="@id/Chatting_List_New_Chat_Count_TV"
-            android:layout_alignParentBottom="true"
-            android:text="Last_Chat_Time"
-            android:textColor="@color/Transparent_Black50"
-            android:textSize="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </TextView>
+
+    <TextView
+        android:id="@+id/Chatting_List_Last_Chat_Date_TV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:includeFontPadding="false"
+        android:fontFamily="@font/notosans_regular"
+        android:text="Last_Chat_Time"
+        android:textColor="@color/Theme_Text_Color"
+        android:layout_marginRight="4dp"
+        android:textSize="8dp"></TextView>
 </RelativeLayout>
 </layout>
