--- a/app/src/main/res/layout/fragment_chatting_list_view.xml
+++ b/app/src/main/res/layout/fragment_chatting_list_view.xml
@@ -13,23 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        android:padding="5dp"
         tools:context="com.bigjeon.grumbling.fragments.Friend_List_Fragment">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
                 android:id="@+id/Chatting_List_Title_Container"
-                android:padding="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
                 <TextView
-                    android:paddingTop="5dp"
-                    android:textSize="20dp"
-                    android:text="채팅 목록"
-                    android:layout_marginLeft="5dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
+                    android:visibility="visible"
+                    android:fontFamily="@font/notosans_medium"
+                    android:includeFontPadding="false"
+                    android:textSize="12dp"
+                    android:text="- 채팅 목록"
+                    android:layout_marginLeft="16dp"
+                    android:textColor="@color/Theme_Text_Color"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
@@ -37,7 +39,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_below="@id/Chatting_List_Title_Container"
                 android:id="@+id/Chatting_List_Rcv"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="12dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 tools:listitem="@layout/chatting_list_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
