--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,45 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/User_List_Container"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:paddingTop="6dp"
         android:layout_margin="5dp"
-        android:padding="5dp">
+        android:paddingBottom="6dp">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/Friend_List_User_Img_Civ"
-            app:civ_border_color="@color/purple_200"
-            app:civ_border_width="1dp"
             android:layout_alignParentLeft="true"
             android:src="@drawable/app_logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp">
+            android:paddingTop="4dp"
+            app:civ_border_color="@color/Theme_Less_Accent_Color"
+            app:civ_border_width="0.5dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp">
         </de.hdodenhof.circleimageview.CircleImageView>
         <TextView
             android:id="@+id/Friend_List_User_Name_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User_Name"
-            android:textColor="@color/black"
-            android:layout_marginLeft="5dp"
-            android:layout_centerInParent="true"
-            android:textSize="15dp"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_medium"
+            android:textColor="@color/Theme_Text_Color"
+            android:layout_marginLeft="8dp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/Friend_List_User_Img_Civ">
         </TextView>
         <TextView
             android:id="@+id/Friend_List_User_Uid_TV"
-            android:text="상태 메세지입니다."
-            android:layout_marginTop="3dp"
-            android:textSize="10dp"
-            android:textColor="@color/Transparent_Black50"
+            android:text="#Location"
+            android:includeFontPadding="false"
+            android:fontFamily="@font/notosans_regular"
+            android:textSize="14dp"
+            android:textColor="@color/Theme_Less_Accent_Color"
             android:layout_below="@+id/Friend_List_User_Name_TV"
             android:layout_toRightOf="@+id/Friend_List_User_Img_Civ"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
+        <RelativeLayout
+            android:id="@+id/User_List_Go_Chat_Container"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/ic_baseline_arrow_forward_24"
+            android:backgroundTint="@color/Theme_Text_Color">
+        </de.hdodenhof.circleimageview.CircleImageView>
+        </RelativeLayout>
     </RelativeLayout>
 </layout>
